--- a/index.html
+++ b/index.html
@@ -1,13 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE HTML>
-<!--
-	Eventually by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Eventually by HTML5 UP</title>
+		<title>Lifestyle</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,9 +11,9 @@
 
 		<!-- Header -->
 			<header id="header">
-				<h1>Eventually</h1>
-				<p>A simple template for telling the world when you'll launch<br />
-				your next big thing. Brought to you by <a href="http://html5up.net">HTML5 UP</a>.</p>
+				<h1>Known.best</h1>
+				<p>A LifeStyle Blog<br />
+				Coming Soon <a href="http://known.best">Known.best</a>.</p>
 			</header>
 
 		<!-- Signup Form -->
@@ -36,7 +31,7 @@
 					<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Known </li><li>Credits: <a href="http://known.best">LifeStyle Blog</a></li>
 				</ul>
 			</footer>
 
@@ -45,14 +40,3 @@
 
 	</body>
 </html>
-=======
-<!DOCTYPE html>
-<html>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
-</html>
->>>>>>> fb341fe0bc38e9c9ae5f3b10a5885a638a3f995d
