edit headings and subheadings

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Massively by HTML5 UP</title>
+		<title>Known.best</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 					<div id="intro">
 						<h1>Known<br />
 						Best</h1>
-						<p>Lifestyle Blog <a href="https://twitter.com/knownbell">@knownbell</a> & <a href="https://known.best">www.known.best</a><br />
+						<p>Unknown by you, fully known by me.<br> Lifestyle Blog <a href="https://twitter.com/knownbell">@knownbell</a> & <a href="https://known.best">www.known.best</a><br />
 						Inspire <a href="https://html5up.net/license">Create</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Live</a></li>
@@ -50,12 +50,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">January 01, 2020</span>
+									<h2><a href="#">And this is<br />
+									a time to explore.</a></h2>
+									<p>I find myself finally reaching my dreams. Seeing them come true.<br />
+									Breaking off the limitations I allowed myself to be restricted by. I live, I love. <br />
+									What about you, have you found yourself yet? If so, where along the journey are you? </p>
 								</header>
 								<a href="#" class="image main"><img src="images/derick-mckinney-zYDMzAuxs9Q-unsplash.jpg" alt="at a loft" /></a>
 								<ul class="actions special">
