added new blog page set as active tab css class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is known.best</a></li>
+							<li class="active"><a href="index.html">This is Known.best</a></li>
 							<li><a href="generic.html">Generic Page</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -59,7 +59,7 @@
 								</header>
 								<a href="#" class="image main"><img src="images/derick-mckinney-zYDMzAuxs9Q-unsplash.jpg" alt="at a loft" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="1_1_2020.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
 
