--- a/1_1_2020.html
+++ b/1_1_2020.html
@@ -51,10 +51,10 @@
 										It's time to stop making excuses and take your breakthrough victory.</p>
 								</header>
 								<div class="image main"><img src="images/derick-mckinney-zYDMzAuxs9Q-unsplash.jpg" alt="" /></div>
-								<p>All the goals, dreams, and aspirations will only come int o realization when you consistently believe and work towards it. </p>
+								<p>All the goals, dreams, and aspirations will only come into realization when you consistently believe and work towards it. </p>
 								<p>Take ownership. You want it, do it. Leave it at that. If others can achieve that and so much more, why not you? You have everything you need, and if you "think" you lack what you need, you'll never succeed.</p>
 								<p>This is the year where you toss the 3D classes, and start seeing your wolrd in 5D. How many dimensions can you try to see? Break off the angular constraints that shove you into that box you're not meant to be it. You are a winner, if you want it, if you work for it, if you walk in it. </p>
-								<p>Bust out your wings and soar through where the only one that can limit you is yourself. </p>
+								<p>Bust out your wings and soar through where the only one that can limit you is yourself. Yes, I'm talking to you. I want to see you touch the sky. Limitless. </p>
 							</section>
 
 					</div>
