edit vision post

--- a/1_1_2020.html
+++ b/1_1_2020.html
@@ -1,8 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	2020 vision
 -->
 <html>
 	<head>
@@ -47,14 +45,17 @@
 									<span class="date">January 1, 2020</span>
 									<h1>Hello 2020<br />
 									Needing vision for 2020?</h1>
-									<p>So many limitations have tried to hold you back for too long now.<br />
+									<p>Hydration needed for vision. . . . plenty. Adjust your lenses, put off the frenzy.<br />
 										It's time to stop making excuses and take your breakthrough victory.</p>
 								</header>
 								<div class="image main"><img src="images/derick-mckinney-zYDMzAuxs9Q-unsplash.jpg" alt="" /></div>
-								<p>All the goals, dreams, and aspirations will only come into realization when you consistently believe and work towards it. </p>
-								<p>Take ownership. You want it, do it. Leave it at that. If others can achieve that and so much more, why not you? You have everything you need, and if you "think" you lack what you need, you'll never succeed.</p>
-								<p>This is the year where you toss the 3D classes, and start seeing your wolrd in 5D. How many dimensions can you try to see? Break off the angular constraints that shove you into that box you're not meant to be it. You are a winner, if you want it, if you work for it, if you walk in it. </p>
-								<p>Bust out your wings and soar through where the only one that can limit you is yourself. Yes, I'm talking to you. I want to see you touch the sky. Limitless. </p>
+								<p>The drill, the focus, distractions are many. Day in, Day out, one focus, that's winning. </p>
+								<p>Looking back will make you crash. Worrying  just causes lack. <br> 
+									Take ownership. You want it, do it. Leave it at that. 
+									If others can achieve , why not you? 
+									You have everything you need, and if you "think" you lack what you need, you'll never succeed.</p>
+								<p>This is the year where you toss the 3D classes, and start seeing your wolrd in 5D. How many dimensions can you try to see? Break off the angular constraints that shove you into that box you're not meant to be in. <br> Limitless. </p>
+								<p>If you want it, if you work for it, if you walk in it, so let it be. Learn to be content, be still, be free. Don't force it just press on it, walk towards it. . . And see. </p>
 							</section>
 
 					</div>
