--- a/index.html
+++ b/index.html
@@ -67,14 +67,21 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">January 06, 2020</span>
+										<h2><a href="#">Window<br />
+										Wonder has spoken... "Wide Open!"</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/julian-paul-_f1z9NtR2A8-unsplash.jpg" alt="" /></a>
+									<p>All I wanted was a window, the sun glow . . .a little. I see it further down the road, my best hope. . . .a riddle.
+
+										To find truth, some hard ground.
+										
+										To take root, and be found.
+										
+										To hold truth, and see down.
+										</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="1_6_2020.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
