edit text links font size

--- a/1_1_2020.html
+++ b/1_1_2020.html
@@ -25,9 +25,8 @@
 						<ul class="links">
                             <li><a href="index.html">This is Known.best</a></li>
 							<li class="active"><a href="1_1_2020.html">The Time is Now</a></li>
-							<li><a href="1_6_2020.html">Wonder-Window</a></li>
-							<li><a href="generic.html">Generic Page<a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="1_6_2020.html">Window</a></li>
+							
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
