--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<header>
 										<span class="date">January 06, 2020</span>
 										<h2><a href="#">Window<br />
-										Wonder has spoken... "Wide Open!"</a></h2>
+										Wonder has spoken..<br> "Wide-Open!"</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/julian-paul-_f1z9NtR2A8-unsplash.jpg" alt="" /></a>
 									<p>All I wanted was a window, the sun glow . . .a little. I see it further down the road, my best hope. . . .a riddle.
@@ -81,7 +81,7 @@
 										To hold truth, and see down.
 										</p>
 									<ul class="actions special">
-										<li><a href="1_6_2020.html" class="button">Full Story</a></li>
+										<li><a href="1_6_2020.html" class="button">Full Poem</a></li>
 									</ul>
 								</article>
 								<article>
