--- a/index.html
+++ b/index.html
@@ -86,14 +86,27 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<span class="date">January 20, 2020</span>
+										<h2><a href="#">Glory<br />
+										Tell My Story</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/marc-kleen-tuoBNgI5uLA-unsplash.jpg" alt="hair" /></a>
+									<p>I'm living in the Glory,<br>
+										So I must tell my story.<br>
+										The wonder through the window,<br>
+										Has brought me to the middle</p>
+										<p>Of a crossways here in heaven,<br>
+											Where Adonnai provides the leaven.<br>
+											I drink, I eat, the Sabbath.<br>
+											I bless, I read, and meditate. <br>
+											My mind to keep up with the pace,<br>
+											My drive to lean on only grace,<br>
+											My  soul to keep my mind awake,<br>
+											Can't loose my gaze,<br>
+											Must Mount trailblaze,
+										</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="1_20_2020.html" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
