--- a/1_20_2020.html
+++ b/1_20_2020.html
@@ -23,9 +23,9 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-                            <li><a href="index.html">Glory</a></li>
-                            <li class="active"><a href="1_6_2020.html">Window</a></li>
-                            <li><a href="1_1_2020.html">The Time is Now</a></li>
+                            <li><a href="index.html">Known.best</a></li>
+                            <li class="active"><a href="1_20_2020.html">Glory</a></li>
+                            <li><a href="1_6_2020.html">window</a></li>
 						
 						</ul>
 						<ul class="icons">
