--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										To hold truth, and see down.
 										</p>
 									<ul class="actions special">
-										<li><a href="1_6_2020.html" class="button">Full Poem</a></li>
+										<li><a href="1_6_2020.html" class="button">Full Floetry</a></li>
 									</ul>
 								</article>
 								<article>
@@ -106,19 +106,22 @@
 											Must Mount trailblaze,
 										</p>
 									<ul class="actions special">
-										<li><a href="1_20_2020.html" class="button">Full Story</a></li>
+										<li><a href="1_20_2020.html" class="button">Full Floetry</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<span class="date">April 18, 2017</span>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<span class="date">January 31, 2020</span>
+										<h2><a href="#">Fire Time Slow Rise<br />
+										What's that Life? A suprise</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/nathan-lindahl-1j18807_ul0-unsplash.jpg" alt="fire" /></a>
+									<p>Fire Time, 
+										Can't help but rhyme.<br>
+										I know I have a lot to do -- <br>
+										And that always seems to be the case.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="Fire_Time_01_21_2020.html" class="button">Full Floetry</a></li>
 									</ul>
 								</article>
 								<article>
