fire fully published

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 										<h2><a href="#">Glory<br />
 										Tell My Story</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/marc-kleen-tuoBNgI5uLA-unsplash.jpg" alt="hair" /></a>
+									<a href="1_20_2020.html" class="image fit"><img src="images/marc-kleen-tuoBNgI5uLA-unsplash.jpg" alt="hair" /></a>
 									<p>I'm living in the Glory,<br>
 										So I must tell my story.<br>
 										The wonder through the window,<br>
@@ -103,7 +103,9 @@
 											My drive to lean on only grace,<br>
 											My  soul to keep my mind awake,<br>
 											Can't loose my gaze,<br>
-											Must Mount trailblaze,
+											Must Mount trailblaze,<br> 
+											A conqueror of all sun rays. <br>
+                                			A conquest kingdom realms away.<br>
 										</p>
 									<ul class="actions special">
 										<li><a href="1_20_2020.html" class="button">Full Floetry</a></li>
